
Release notes for production domapp -- jacobsen@npxdesigns.com

=========================================================
domapp V00-00-10  8/16/2005
       Requires domapp.sbi: 264, DOM-MB packages domapp-V00-00-09
       Test with domapp-tools (DMT) V00-00-07

Upgrades/bug fixes
* When collecting SPE data, perform extra launch and wait for 
  TWO events in lookback memory before proceeding

=========================================================
domapp V00-00-09  8/11/2005
       Requires domapp.sbi: 264, DOM-MB packages domapp-V00-00-09
       Test with domapp-tools (DMT) V00-00-07

Upgrades/bug fixes
* New FPGA design, per Thorsten:
   - Charge stamp generation fix
   - Self local coincidence added
   - New LC option to require up AND down
   - Fixes problem which occurs when hammering ATWDs at 80kHz

Outstanding issues: see previous release.

=========================================================
domapp V00-00-08  7/5/2005
       Requires domapp.sbi: 245, DOM-MB packages domapp-V00-00-08
       Test with domapp-tools (DMT) V00-00-07

Upgrades/bug fixes
* Cleaned up pedestal collection to avoid races with FPGA when
  collecting trigger data ("missing pedestal event" problem)

Outstanding issues known in this release, or not yet addressed from
previous releases:
* Occasionally uncompressed data sneak into compressed data when
  real SPE/PMT triggers are collected (HV is on)
* DOMs have been seen to crash during very long (36 hr) tests
* Occasionally get forced triggers when pulser is active (should
  be disallowed)
* Occasionally rate drops too low during 1Hz heartbeat test

=========================================================
domapp V00-00-07  6/30/2005
       Requires domapp.sbi: 245, DOM-MB packages domapp-V00-00-07
       Test with domapp-tools (DMT) V00-00-07

Upgrades/bug fixes
* New FPGA design disables Rx of LC unless LC enabled explicitly
* "             " fixes bug in interface to flasher board