@@ -1,9 +1,19 @@
-
 Release notes for production domapp -- jacobsen@npxdesigns.com
 
 =========================================================
+domapp V00-00-11  8/29/2005
+       Requires domapp.sbi: 264, DOM-MB packages domapp-V00-00-11
+       Test with domapp-tools (DMT) V00-00-08
+
+Upgrades/bug fixes
+* Lookback memory non-cached, prevents races with FPGA when 
+  writing/clearing LBM ("missing hit" problem fixed).
+* In pedestal collection code, remove extra launch added in 
+  domapp V00-00-10.
+
+=========================================================
 domapp V00-00-10  8/16/2005
-       Requires domapp.sbi: 264, DOM-MB packages domapp-V00-00-09
+       Requires domapp.sbi: 264, DOM-MB packages domapp-V00-00-10
        Test with domapp-tools (DMT) V00-00-07
 
 Upgrades/bug fixes
